kubernetes/generated/manifests/prod/cilium/CiliumNetworkPolicy-allow-hubble-relay-server-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-relay-server-egress
  namespace: kube-system
spec:
  description: Policy for egress from hubble relay to hubble server in Cilium agent.
  egress:
    - toEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
